--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,31 +1,27 @@
+@import "normalize";
+@import url('https://fonts.googleapis.com/css?family=Raleway:100,700');
+body {
+  background-color: black;
+}
 .grid-width,
 .grid-item {
   max-width: 33.333%;
 }
-
 .grid-item {
   float: left;
 }
-
 .grid-item img {
   display: block;
-  max-width: 100%;
+  max-width: calc(100% - 4px);
+  padding: 2px 2px;
 }
 .images {
-  background-color: navy;
   width: calc(100% - 200px);
   height: 1000px;
   float: right;
+}
 
-}
-header {
-  display: block;
-  position:fixed;
-  width: 200px;
-  float: left;
-  height: 100vh;
-  background-color: red
-}
+@import "header";
 .clearfix:after {
 	visibility: hidden;
 	display: block;
@@ -35,3 +31,11 @@ header {
 	height: 0;
 	}
 @import 'responsive';
+
+
+//
+// .grid-item--gigante {
+//   width: 120px;
+//   height: 80px;
+//   z-index: 2; /* abover other items */
+// }
