--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -4,23 +4,29 @@ header {
   width: 200px;
   float: left;
   height: 100vh;
+  font-family: 'Raleway', sans-serif;
 
   h1 {
     font-size: 2em;
     color: white;
     font-weight: normal;
     padding-left: 20px;
-    font-family: 'Raleway', sans-serif;
-  }
-  h1 span::first-letter{
-    font-weight: bold;
-  }
-  h2 {
-    font-size: 1em;
-    color: white;
-    font-weight: lighter;;
-    padding-left: 20px;
-    font-family: 'Raleway', sans-serif;
+    margin-bottom: 0px;
   }
 
+  h2 {
+    font-size: 1em;
+    color: rgb(180, 180, 180);
+    font-weight: lighter;
+    padding-left: 20px;
+    margin-top: 1px;
+  }
+  p.copyrights {
+    color: white;
+    width: 100%;
+    font-size: 0.8em;
+    text-align: center;
+    position: absolute;;
+    bottom: 10px;
+  }
 }
