--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "normalize";
+@import "lightbox";
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,700');
 body {
   background-color: black;
